[gd_scene load_steps=4 format=3 uid="uid://wqou0ibwbfku"]

[ext_resource type="Script" path="res://ui/title_screen/tilte_screen.gd" id="1_4egoi"]
[ext_resource type="Theme" uid="uid://dfureb8blyilx" path="res://ui/themes/default_theme.tres" id="1_26s2w"]
[ext_resource type="PackedScene" uid="uid://cy8otjo413bqb" path="res://ui/elements/button.tscn" id="2_e2snu"]

[node name="TilteScreen" type="Control"]
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4egoi")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Viewport" type="Control" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/Viewport"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -80.0
offset_right = 85.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_26s2w")
theme_override_font_sizes/font_size = 36
text = "RICOCHET"

[node name="Buttons" type="Control" parent="Margin/Viewport"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -41.5
offset_right = 105.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" parent="Margin/Viewport/Buttons" instance=ExtResource("2_e2snu")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -12.0
offset_right = 41.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"

[node name="SettingsButton" parent="Margin/Viewport/Buttons" instance=ExtResource("2_e2snu")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 13.0
offset_right = 42.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
text = "SETTINGS
"

[connection signal="pressed" from="Margin/Viewport/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
